--- a/index.html
+++ b/index.html
@@ -1,58 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%">
   <head>
     <meta charset="UTF-8" />
-    <title>display普通表格</title>
+    <title>display</title>
     <style type="text/css">
-      .box{ 
-        display: flex;
-        justify-content: flex-start;
-        width: 800px;
-        height: 800px;
-        border: 1px solid black;
+      * {
+        margin: 0;
+        padding: 0;
       }
+
+      .box {
+        display: flex;
+        height: 400px;
+        background-color: black;
+      }
+
       .left {
-        /* width: 400px; */
-        /* height: 300px; */
         background-color: darkcyan;
       }
+
       .right {
-        flex-basis: 300px;
-        /* width: 200px; */
-        height: 100px;
-        background-color: cadetblue;
+        flex: 1;
+        background-color: lightsalmon;
       }
     </style>
   </head>
-  <body>
+  <body style="height: 100%">
     <div class="box">
-      <div class="left">1</div>
-      <!-- <div class="left">2</div>
-      <div class="left">3</div>
-      <div class="left">4</div>
-      <div class="left">5</div>
-      <div class="left">6</div>
-      <div class="left">7</div>
-      <div class="left">8</div>
-      <div class="left">9</div>
-      <div class="left">0</div>
-      <div class="left">1</div>
-      <div class="left">2</div>
-      <div class="left">3</div>
-      <div class="left">4</div>
-      <div class="left">5</div> -->
-      <div class="right"></div>
+      <div class="left">left</div>
+      <div class="right">right</div>
     </div>
-
-    <script>
-      /**
-       * 800 - 600 - 400 = -200
-       * 
-       * 权重：.3 * 600 + .3 * 400 = 300
-       * 
-       * -120 * (180 / 300) = -72
-       * -120 * (120 / 300) = -48
-       */
-    </script>
   </body>
 </html>
