--- a/index.html
+++ b/index.html
@@ -7,28 +7,40 @@
       * {
         margin: 0;
         padding: 0;
+        font-size: 0;
       }
 
       .box {
-        display: flex;
+        margin: 0 auto;
+        width: 700px;
+        background-color: lightyellow;
+      }
+
+      .box::after {
+        display: block;
+        content: '';
+        clear: both;
+      }
+
+      .content {
+        float: left;
+        box-sizing: border-box;
+        width: 300px;
         height: 400px;
-        background-color: black;
-      }
-
-      .left {
-        background-color: darkcyan;
-      }
-
-      .right {
-        flex: 1;
-        background-color: lightsalmon;
+        margin-right: 25px;
+        margin-bottom: 10px;
+        margin-left: 25px;
+        border: 1px solid gray;
       }
     </style>
   </head>
   <body style="height: 100%">
     <div class="box">
-      <div class="left">left</div>
-      <div class="right">right</div>
+      <!-- <div class="content"></div> -->
+      <div class="content" style="height: 500px;"></div>
+      <div class="content"></div>
+      <div class="content"></div>
+      <div class="content"></div>
     </div>
   </body>
 </html>
