--- a/index.html
+++ b/index.html
@@ -1,46 +1,41 @@
 <!DOCTYPE html>
-<html style="height: 100%">
+<html lang="zh-cn">
   <head>
-    <meta charset="UTF-8" />
-    <title>display</title>
-    <style type="text/css">
+    <meta charset="utf-8" />
+    <style>
       * {
-        margin: 0;
         padding: 0;
+        margin: 0;
         font-size: 0;
       }
 
-      .box {
-        margin: 0 auto;
-        width: 700px;
-        background-color: lightyellow;
+      #id1 {
+        position: relative;
+        width: 50px;
+        height: 300px;
+        font-size: 14px;
+        border: 2px solid rgb(187, 55, 55);
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
       }
 
-      .box::after {
+      /* #id1::after {
         display: block;
+        position: absolute;
         content: '';
-        clear: both;
-      }
-
-      .content {
-        float: left;
-        box-sizing: border-box;
-        width: 300px;
-        height: 400px;
-        margin-right: 25px;
-        margin-bottom: 10px;
-        margin-left: 25px;
-        border: 1px solid gray;
-      }
+        top: -45px;
+        left: -50px;
+        width: 0;
+        height: 0;
+        border: 50px solid transparent;
+        border-bottom-color: #fff;
+      } */
     </style>
   </head>
-  <body style="height: 100%">
-    <div class="box">
-      <!-- <div class="content"></div> -->
-      <div class="content" style="height: 500px;"></div>
-      <div class="content"></div>
-      <div class="content"></div>
-      <div class="content"></div>
+  <body>
+    <div id="id1">
+      氛围和纠纷被我方便玩家刚背完一改变wig把我为我好给各位
     </div>
   </body>
 </html>
