--- a/index.html
+++ b/index.html
@@ -9,15 +9,28 @@
         font-size: 0;
       }
 
+      html,
+      body {
+        width: 100%;
+        height: 100%;
+      }
+
       #id1 {
+        box-sizing: border-box;
         position: relative;
-        width: 50px;
-        height: 300px;
+        width: 960px;
+        height: 50%;
         font-size: 14px;
         border: 2px solid rgb(187, 55, 55);
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
+      }
+
+      #id2 {
+        width: 30px;
+        height: 100%;
+        background-color: rgb(94, 191, 191);
       }
 
       /* #id1::after {
@@ -35,7 +48,8 @@
   </head>
   <body>
     <div id="id1">
-      氛围和纠纷被我方便玩家刚背完一改变wig把我为我好给各位
+      <!-- 氛围和纠纷被我方便玩家刚背完一改变wig把我为我好给各位 -->
+      <div id="id2"></div>
     </div>
   </body>
 </html>
