--- a/index.html
+++ b/index.html
@@ -1,55 +1,24 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
-  <head>
-    <meta charset="utf-8" />
-    <style>
-      * {
-        padding: 0;
-        margin: 0;
-        font-size: 0;
-      }
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <div style="display: inline-block; width: 100px; height: 100px; background: pink;"></div>
+  <div style="display: inline-block; width: 100px; height: 100px; background: pink;"></div>
+  <div style="display: inline-block; width: 100px; height: 100px; background: pink;"></div>
+  <div style="display: inline-block; width: 100px; height: 100px; background: pink;"></div>
 
-      html,
-      body {
-        width: 100%;
-        height: 100%;
-      }
-
-      #id1 {
-        box-sizing: border-box;
-        position: relative;
-        width: 960px;
-        height: 50%;
-        font-size: 14px;
-        border: 2px solid rgb(187, 55, 55);
-        overflow: hidden;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-      }
-
-      #id2 {
-        width: 30px;
-        height: 100%;
-        background-color: rgb(94, 191, 191);
-      }
-
-      /* #id1::after {
-        display: block;
-        position: absolute;
-        content: '';
-        top: -45px;
-        left: -50px;
-        width: 0;
-        height: 0;
-        border: 50px solid transparent;
-        border-bottom-color: #fff;
-      } */
-    </style>
-  </head>
-  <body>
-    <div id="id1">
-      <!-- 氛围和纠纷被我方便玩家刚背完一改变wig把我为我好给各位 -->
-      <div id="id2"></div>
-    </div>
-  </body>
+  <script>
+    const jsonp_017071984879741975 = function(data) {
+      console.log(13, data)
+    }
+  </script>
+  <script src="https://iv.jd.com/slide/g.html?appId=1604ebb2287&scene=login&product=click-bind-suspend&e=ALC6RUWIH36L6TO6DXQ4R7LA3VXP6ZYVRPHRVSSVT23AEX5L6U5MKYKEJVKITV3PLQMVLMRHS55VZTQ62LE5UF3VQU&lang=zh_CN&callback=jsonp_017071984879741975">
+    
+  </script>
+</body>
 </html>
