--- a/web/css/02.布局/Container布局容器/position: sticky.html
+++ b/web/css/02.布局/Container布局容器/position: sticky.html
@@ -34,7 +34,7 @@
       width: 200px;
       height: calc(100vh - 60px);
       background-color: antiquewhite;
-      overflow-y: scroll
+      overflow-y: scroll;
     }
 
     .container .aside .aside-item {
