--- a/web/css/05.实战/文本/01.多行溢出/index.html
+++ b/web/css/05.实战/文本/01.多行溢出/index.html
@@ -19,6 +19,7 @@
 
     .multi-line {
       display: -webkit-box;
+      line-clamp: 5;
       -webkit-line-clamp: 5;
       -webkit-box-orient: vertical;
       overflow: hidden;
